fix front end center align with h1

--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,9 @@ h1 {
 
     font-family: sans-serif;
     font-size: 3em;
+
+    margin: 0 auto;
+    display: table;
 }
 
 input[type=text], select{
